<resources>
    <string name="app_name">Point End</string>
    <string name="you_are_at">You are at ....</string>
    <string name="i_am_here">I am here</string>
    <string name="gps_status">GPS Status</string>
    <string name="tap_on">Tap on the button below to get your location</string>
    <string name="placeholder">John Mark</string>
    <string name="your_names">Your Names</string>
    <string name="names">Your Names</string>
    <string name="your_phone">Your Phone</string>
    <string name="phone">Your Phone</string>
    <string name="register">Register</string>
    <string name="point_end">Point End</string>
</resources>
