<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context="com.walter.pointend.DestinationActivity">


    <TextView
        android:textColor="@color/whiteColor"
        android:id="@+id/tvNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:onClick="open_admin"
        android:text="@string/placeholder"
        android:textSize="22dp"/>

    <TextView
        android:textColor="@color/whiteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/tap_on"
        android:textSize="16dp"/>

    <TextView
        android:textColor="@color/whiteColor"
        android:id="@+id/tvGPStaus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/gps_status"
        android:textSize="16dp"/>

    <Button
        android:textColor="@color/whiteColor"
        android:id="@+id/button2"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="160dp"
        android:onClick="update_location"
        android:text="@string/i_am_here"/>

    <ProgressBar
        android:id="@+id/progressLocation"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/you_are_at"
        android:textColor="@color/whiteColor"/>

</LinearLayout>
