<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="30dp"
    tools:context="com.walter.pointend.MainActivity">


    <TextView
        android:textColor="@color/whiteColor"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/your_names"/>

    <EditText
        android:textColorHint="@color/whiteColor"
        android:textColor="@color/whiteColor"
        android:id="@+id/inputNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/names"
        android:inputType="textPersonName"
        android:maxLines="1"/>

    <TextView
        android:textColor="@color/whiteColor"
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/your_phone"/>

    <EditText
        android:textColorHint="@color/whiteColor"
        android:textColor="@color/whiteColor"
        android:id="@+id/inputPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLines="1"/>

    <Button
        android:textColor="@color/whiteColor"
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="save"
        android:text="@string/register"/>

    <ProgressBar
        android:id="@+id/progressBarSend"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

</LinearLayout>
